tests/error/comprehension_errors/capture3.err
Error: Copy violation (at $FILE:13:12)
   | 
11 | @guppy
12 | def foo(xs: list[int], s: MyStruct @owned) -> list[MyStruct]:
13 |     return [s for x in xs]
   |             ^ Field `s.q` with non-copyable type `qubit` would be moved
   |               multiple times when evaluating this comprehension

Guppy compilation failed due to 1 previous error
